# coding_challenge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: coding_challenge.cpp  coding_challenge.h  coding_challenge_test.cpp
